<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:elevation="0dp"
            android:id="@+id/action_bar"
            android:background="#FFF"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <TextView
                android:textSize="18sp"
                android:textColor="@color/textColorPrimary"
                android:text="@string/i_reader_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.Toolbar
            android:layout_alignParentBottom="true"
            android:elevation="3dp"
            android:background="#FFF"
            android:id="@+id/bottom_holder"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="-60dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">
            <TextView
                android:gravity="center"
                android:textAllCaps="true"
                android:text="bottom holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.v7.widget.Toolbar>

        <com.anarchy.classify.ClassifyView
            android:layout_below="@id/action_bar"
            android:layout_above="@id/bottom_holder"
            android:id="@+id/classify_view"
            app:MainPaddingLeft="12dp"
            app:MainPaddingRight="12dp"
            app:SubPaddingLeft="12dp"
            app:SubPaddingRight="12dp"
            app:MainClipToPadding="false"
            app:SubClipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <android.support.v7.widget.Toolbar
            android:elevation="3dp"
            android:background="#FFF"
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="-60dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/i_reader_all_select"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:text="@string/i_reader_last_read"
                    android:textColor="@color/red"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/text_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/i_reader_finish"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="15sp"/>
            </FrameLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:background="#FFF"
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-55dp"
            android:elevation="3dp"
            >

            <RelativeLayout
                android:id="@+id/container_delete"
                android:clipToPadding="false"
                android:paddingTop="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:duplicateParentState="true"
                    android:id="@+id/ic_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:tint="@color/selector_color_text"
                    app:srcCompat="@drawable/ic_delete"/>
                <TextView
                    android:visibility="invisible"
                    android:id="@+id/ic_delete_badge"
                    android:layout_marginRight="-8dp"
                    android:layout_marginTop="-8dp"
                    android:layout_alignRight="@id/ic_delete"
                    android:textSize="10sp"
                    android:gravity="center"
                    tools:text="1"
                    android:textColor="#FFF"
                    android:background="@drawable/bg_circle_red"
                    android:layout_width="18dp"
                    android:layout_height="18dp"/>

                <TextView
                    android:duplicateParentState="true"
                    android:id="@+id/text_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_delete"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/i_reader_delete"
                    android:textColor="@color/selector_color_text"
                    android:textSize="12sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_move"
                android:paddingTop="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:duplicateParentState="true"
                    android:id="@+id/ic_move"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:tint="@color/selector_color_text"
                    app:srcCompat="@drawable/ic_move"/>

                <TextView
                    android:duplicateParentState="true"
                    android:id="@+id/text_move"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_move"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/i_reader_move"
                    android:textColor="@color/selector_color_text"
                    android:textSize="12sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_share"
                android:paddingTop="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:duplicateParentState="true"
                    android:id="@+id/ic_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:tint="@color/selector_color_text"
                    app:srcCompat="@drawable/ic_share"/>

                <TextView
                    android:duplicateParentState="true"
                    android:id="@+id/text_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_share"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/i_reader_share"
                    android:textColor="@color/selector_color_text"
                    android:textSize="12sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_order"
                android:paddingTop="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:duplicateParentState="true"
                    android:id="@+id/ic_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:tint="@color/selector_color_text"
                    app:srcCompat="@drawable/ic_order"/>

                <TextView
                    android:duplicateParentState="true"
                    android:id="@+id/text_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_order"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/i_reader_book_order"
                    android:textColor="@color/selector_color_text"
                    android:textSize="12sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_detail"
                android:paddingTop="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:duplicateParentState="true"
                    android:id="@+id/ic_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:tint="@color/selector_color_text"
                    app:srcCompat="@drawable/ic_detail"/>

                <TextView
                    android:duplicateParentState="true"
                    android:id="@+id/text_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_detail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/i_reader_detail"
                    android:textColor="@color/selector_color_text"
                    android:textSize="12sp"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>